Add new apis
